fix margin on footer index version mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,7 +186,7 @@ p {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   justify-content: space-between;
 }
 
